--- a/GAMES/8Jackpot.html
+++ b/GAMES/8Jackpot.html
@@ -14,6 +14,7 @@
     <title>Jackpot Result | Baba Ijebu</title>
 
     <link rel="stylesheet" href="tableStyles.css">
+    <link rel="stylesheet" media="print" href="/GAMES/paper-size.css" />
 
 </head>
 <body>
@@ -2712,6 +2713,28 @@
             </tbody>
 
                                     <!-- day95-->
+            <tbody>
+                <tr>
+                    <td class="serial-num">95</td>
+                    <td class="days"><small>Nov 26th tues</small></td>
+                
+                    <!-- winning-->
+                    <td class="winning">24</td>
+                    <td class="winning">62</td>
+                    <td class="winning">14</td>
+                    <td class="winning">42</td>
+                    <td class="winning" id="lbw">8</td>
+    
+                    <!-- machine-->
+                    <td class="machine" id="fbm">25</td>
+                    <td class="machine">27</td>
+                    <td class="machine">65</td>
+                    <td class="machine">64</td>
+                    <td class="machine" id="lbm">50</td>
+                </tr>
+            </tbody>
+
+                                    <!-- day96-->
             <tbody>
                 <tr>
                     <td class="serial-num">96</td>
