updates all result

--- a/GAMES/18MSP.html
+++ b/GAMES/18MSP.html
@@ -1401,11 +1401,11 @@
                     <td class="winning" id="lbw">70</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">44</td>
+                    <td class="machine">16</td>
+                    <td class="machine">56</td>
+                    <td class="machine">37</td>
+                    <td class="machine" id="lbm">39</td>
                 </tr>
             </tbody>
 
