--- a/GAMES/20Midweek.html
+++ b/GAMES/20Midweek.html
@@ -1402,11 +1402,11 @@
                     <td class="winning" id="lbw">52</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">81</td>
+                    <td class="machine">53</td>
+                    <td class="machine">87</td>
+                    <td class="machine">63</td>
+                    <td class="machine" id="lbm">65</td>
                 </tr>
             </tbody>
 
