--- a/GAMES/21Fortune.html
+++ b/GAMES/21Fortune.html
@@ -1402,11 +1402,11 @@
                     <td class="winning" id="lbw">34</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">65</td>
+                    <td class="machine">56</td>
+                    <td class="machine">7</td>
+                    <td class="machine">33</td>
+                    <td class="machine" id="lbm">63</td>
                 </tr>
             </tbody>
 
