--- a/GAMES/19LUCKY-G.html
+++ b/GAMES/19LUCKY-G.html
@@ -1403,11 +1403,11 @@
                     <td class="winning" id="lbw">71</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">35</td>
+                    <td class="machine">49</td>
+                    <td class="machine">23</td>
+                    <td class="machine">22</td>
+                    <td class="machine" id="lbm">45</td>
                 </tr>
             </tbody>
 
