--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -242,21 +242,35 @@
     </header>
     <div class="gameResults">
         <section>
-          
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
+                <h3 class="game">Diamond</h3>
+                <p class="winning">14 - 45 - 39 - 90 - 55</p>
+                <p class="machine">85 - 28 - 68 - 4 - 60</p>        
+            </article>
+            <article>
+                <h3 class="game">People</h3>
+                <p class="winning">86 - 5 - 3 - 24 - 71</p>
+                <p class="machine">57 - 67 - 76 - 53 - 10</p>        
+            </article>
+            <article>
+                <h3 class="game">Bingo</h3>
+                <p class="winning">3 - 4 - 62 - 76 - 58</p>
+                <p class="machine">86 - 31 - 15 - 13 - 8</p>        
+            </article>
+            <article>
+                <h3 class="game">Metro</h3>
+                <p class="winning">23 - 60 - 10 - 61 - 27</p>
+                <p class="machine">42 - 3 - 77 - 30 - 40</p>        
+            </article>
+            <article>
+                <h3 class="game">MSP</h3>
+                <p class="winning">72 - 74 - 42 - 37 - 11</p>
                 <p class="machine"></p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
-            </article>
-            <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">International</h3>
+                <p class="winning">24 - 89 - 60 - 32 - 46</p>
+                <p class="machine">31 - 69 - 10 - 90 - 14</p>        
             </article>
         </section>
 
