result Tuesday 3rd DEC 2024

--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -274,8 +274,38 @@
             </article>
         </section>
 
-        <!-- <section>
-        </section>   -->
+        <section>
+            <article>
+                <h3 class="game">Gold</h3>
+                <p class="winning">13 - 32 - 2 - 85 - 16</p>
+                <p class="machine">30 - 7 - 71 - 31 - 86</p>        
+            </article>
+            <article>
+                <h3 class="game">06</h3>
+                <p class="winning">36 - 15 - 13 - 88 - 12</p>
+                <p class="machine">61 - 22 - 52 - 37 - 11</p>        
+            </article>
+            <article>
+                <h3 class="game">Jackpot</h3>
+                <p class="winning">71 - 56 - 3 - 27 - 16</p>
+                <p class="machine">10 - 38 - 46 - 73 - 80</p>        
+            </article>
+            <article>
+                <h3 class="game">Club master</h3>
+                <p class="winning">64 - 12 - 86 - 53 - 70</p>
+                <p class="machine">57 - 15 - 74 - 63 - 59</p>        
+            </article>
+            <article>
+                <h3 class="game">lucky-g</h3>
+                <p class="winning">47 - 43 - 21 - 70 - 82</p>
+                <p class="machine">30 - 68 - 40 - 14 - 27</p>        
+            </article>
+            <article>
+                <h3 class="game">Super</h3>
+                <p class="winning">64 - 80 - 67 - 49 - 1</p>
+                <p class="machine">76 - 59 - 85 - 89 - 86</p>        
+            </article>
+        </section> 
     </div>
 
                     <!-- betway-->
