--- a/index.html
+++ b/index.html
@@ -256,10 +256,10 @@
         </footer>
         <!-- <script src="/Scripts/loading.js"></script> -->
         <script src="script.js"></script>
-        <script src="/Scripts/Message.js"></script>
+        <!-- <script src="/Scripts/Message.js"></script> -->
         
         <!--Start of Tawk.to Script-->
-        <script type="text/javascript">
+        <!-- <script type="text/javascript">
             var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
             (function(){
             var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
@@ -269,7 +269,7 @@
             s1.setAttribute('crossorigin','*');
             s0.parentNode.insertBefore(s1,s0);
             })();
-        </script>
+        </script> -->
         <!--End of Tawk.to Script-->
     </body>
 </html>
