result DECEMBER Mon 8th, 2024

--- a/GAMES/24National.html
+++ b/GAMES/24National.html
@@ -1407,22 +1407,21 @@
             <tbody>
                 <tr>
                     <td class="serial-num">49</td>
-                    <td class="days"><small></small></td>
+                    <td class="days"><small>Dec 8th sun</small></td>
                 
                     <!-- winning-->
-                    <td class="winning">N</td>
-                    <td class="winning">O</td>
-                    <td class="winning"></td>
-                    <td class="winning">D</td>
-                    <td class="winning" id="lbw">R</td>
+                    <td class="winning">89</td>
+                    <td class="winning">42</td>
+                    <td class="winning">31</td>
+                    <td class="winning">77</td>
+                    <td class="winning" id="lbw">24</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm">A</td>
-                    <td class="machine">W</td>
-                    <td></td>
-                    <td class="machine">Y</td>
-                    <td class="machine">E</td>
-                    <td class="machine" id="lbm">T</td>
+                    <td class="machine" id="fbm">32</td>
+                    <td class="machine">68</td>
+                    <td class="machine">69</td>
+                    <td class="machine">56</td>
+                    <td class="machine" id="lbm">48</td>
                 </tr>
             </tbody>
 
