--- a/GAMES/22Bonanza.html
+++ b/GAMES/22Bonanza.html
@@ -1408,22 +1408,21 @@
              <tbody>
                 <tr>
                     <td class="serial-num">49</td>
-                    <td class="days"><small></small></td>
+                    <td class="days"><small>Dec 8th sun</small></td>
                 
                     <!-- winning-->
-                    <td class="winning">N</td>
-                    <td class="winning">O</td>
-                    <td class="winning"></td>
-                    <td class="winning">D</td>
-                    <td class="winning" id="lbw">R</td>
+                    <td class="winning">79</td>
+                    <td class="winning">29</td>
+                    <td class="winning">48</td>
+                    <td class="winning">13</td>
+                    <td class="winning" id="lbw">47</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm">A</td>
-                    <td class="machine">W</td>
-                    <td></td>
-                    <td class="machine">Y</td>
-                    <td class="machine">E</td>
-                    <td class="machine" id="lbm">T</td>
+                    <td class="machine" id="fbm">39</td>
+                    <td class="machine">86</td>
+                    <td class="machine">68</td>
+                    <td class="machine">25</td>
+                    <td class="machine" id="lbm">52</td>
                 </tr>
             </tbody>
 
