Results up-to-date Dec 14th 2024

--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -300,14 +300,14 @@
                 <p class="machine">2 - 61 - 5 - 56 - 58</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">National</h3>
+                <p class="winning">89 - 3 - 49 - 39 - 50</p>
+                <p class="machine">60- 66- 71- 42- 07</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">fairchance</h3>
+                <p class="winning">26 - 25 - 78 - 79 - 64</p>
+                <p class="machine">87 - 28 - 59 - 34 - 29</p>        
             </article>
         </section>
     </div>
