--- a/GAMES/22Bonanza.html
+++ b/GAMES/22Bonanza.html
@@ -1440,11 +1440,11 @@
                     <td class="winning" id="lbw">9</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">22</td>
+                    <td class="machine">56</td>
+                    <td class="machine">67</td>
+                    <td class="machine">29</td>
+                    <td class="machine" id="lbm">54</td>
                 </tr>
             </tbody>
 
