--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 </ul>
                 <div class="navigation">
                     <a class="anchor dailyResult" href="./GAMES/dailyResult.html"  id="dailyResult"></i>Check Day Result</a>
-                    <a class="anchor plan-and-event" href="/plan.html" id="planAndEvent">PLAN & EVENTS</a>
+                    <!-- <a class="anchor plan-and-event" href="/plan.html" id="planAndEvent">PLAN & EVENTS</a> -->
                     <a class="anchor counterpart" href="/classification.html" target="_blank" id="counterpart">Classification Chart</a>                 
                     <!-- <button class="buy-lrCard">Buy LR Card</button> -->
                 </div> 
