--- a/GAMES/22Bonanza.html
+++ b/GAMES/22Bonanza.html
@@ -1462,11 +1462,11 @@
                     <td class="winning" id="lbw">61</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">82</td>
+                    <td class="machine">80</td>
+                    <td class="machine">18</td>
+                    <td class="machine">15</td>
+                    <td class="machine" id="lbm">29</td>
                 </tr>
             </tbody>
 
