--- a/GAMES/24National.html
+++ b/GAMES/24National.html
@@ -1462,11 +1462,11 @@
                     <td class="winning" id="lbw">37</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">85</td>
+                    <td class="machine">89</td>
+                    <td class="machine">68</td>
+                    <td class="machine">17</td>
+                    <td class="machine" id="lbm">72</td>
                 </tr>
             </tbody>
 
