--- a/GAMES/25Aseda.html
+++ b/GAMES/25Aseda.html
@@ -1480,11 +1480,11 @@
                     <td class="winning" id="lbw">63</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">81</td>
+                    <td class="machine">70</td>
+                    <td class="machine">86</td>
+                    <td class="machine">37</td>
+                    <td class="machine" id="lbm">38</td>
                 </tr>
             </tbody>
 
