--- a/GAMES/4Metro.html
+++ b/GAMES/4Metro.html
@@ -2908,21 +2908,21 @@
             <tbody>
                 <tr>
                     <td class="serial-num">104</td>
-                    <td class="days"><small></small></td>
+                    <td class="days"><small>Dec 27th fri</small></td>
                 
                     <!-- winning-->
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning" id="lbw"></td>
+                    <td class="winning">23</td>
+                    <td class="winning">43</td>
+                    <td class="winning">10</td>
+                    <td class="winning">2</td>
+                    <td class="winning" id="lbw">60</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">73</td>
+                    <td class="machine">66</td>
+                    <td class="machine">20</td>
+                    <td class="machine">24</td>
+                    <td class="machine" id="lbm">33</td>
                 </tr>
             </tbody>
         </table>
