--- a/GAMES/8Jackpot.html
+++ b/GAMES/8Jackpot.html
@@ -2914,21 +2914,21 @@
             <tbody>
                 <tr>
                     <td class="serial-num">104</td>
-                    <td class="days"><small></small></td>
+                    <td class="days"><small>Dec 27th fri</small></td>
                 
                     <!-- winning-->
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning" id="lbw"></td>
+                    <td class="winning">22</td>
+                    <td class="winning">73</td>
+                    <td class="winning">61</td>
+                    <td class="winning">18</td>
+                    <td class="winning" id="lbw">41</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">56</td>
+                    <td class="machine">50</td>
+                    <td class="machine">57</td>
+                    <td class="machine">29</td>
+                    <td class="machine" id="lbm">85</td>
                 </tr>
             </tbody>
         </table>
