--- a/GAMES/21Fortune.html
+++ b/GAMES/21Fortune.html
@@ -1480,23 +1480,23 @@
             <tbody>
                 <tr>
                     <td class="serial-num">52</td>
-                    <td class="days"><small></small></td>
+                    <td class="days"><small>Dec 27th fri</small></td>
                 
                     <!-- winning-->
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning" id="lbw"></td>
+                    <td class="winning">11</td>
+                    <td class="winning">60</td>
+                    <td class="winning">52</td>
+                    <td class="winning">80</td>
+                    <td class="winning" id="lbw">5</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">24</td>
+                    <td class="machine">26</td>
+                    <td class="machine">6</td>
+                    <td class="machine">43</td>
+                    <td class="machine" id="lbm">17</td>
                 </tr>
-            </tbody>
+            </tbody> 
         </table>
         <span>FORTUNE</span>
     </main>
