--- a/GAMES/22Bonanza.html
+++ b/GAMES/22Bonanza.html
@@ -1474,21 +1474,21 @@
             <tbody>
                 <tr>
                     <td class="serial-num">52</td>
-                    <td class="days"><small></small></td>
+                    <td class="days"><small>Dec 27th</small></td>
                 
                     <!-- winning-->
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning" id="lbw"></td>
+                    <td class="winning">53</td>
+                    <td class="winning">86</td>
+                    <td class="winning">32</td>
+                    <td class="winning">77</td>
+                    <td class="winning" id="lbw">55</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">36</td>
+                    <td class="machine">47</td>
+                    <td class="machine">5</td>
+                    <td class="machine">70</td>
+                    <td class="machine" id="lbm">40</td>
                 </tr>
             </tbody>
         </table>
