--- a/GAMES/6Gold.html
+++ b/GAMES/6Gold.html
@@ -2912,21 +2912,21 @@
             <tbody>
                 <tr>
                     <td class="serial-num">104</td>
-                    <td class="days"><small></small></td>
+                    <td class="days"><small>Dec 27th fri</small></td>
                 
                     <!-- winning-->
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning" id="lbw"></td>
+                    <td class="winning">76</td>
+                    <td class="winning">52</td>
+                    <td class="winning">67</td>
+                    <td class="winning">61</td>
+                    <td class="winning" id="lbw">8</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">18</td>
+                    <td class="machine">45</td>
+                    <td class="machine">47</td>
+                    <td class="machine">90</td>
+                    <td class="machine" id="lbm">58</td>
                 </tr>
             </tbody>
         </table>
