--- a/GAMES/10Super.html
+++ b/GAMES/10Super.html
@@ -2909,21 +2909,21 @@
             <tbody>
                 <tr>
                     <td class="serial-num">104</td>
-                    <td class="days"><small></small></td>
+                    <td class="days"><small>Dec 28th sat</small></td>
                 
                     <!-- winning-->
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning" id="lbw"></td>
+                    <td class="winning">79</td>
+                    <td class="winning">45</td>
+                    <td class="winning">67</td>
+                    <td class="winning">72</td>
+                    <td class="winning" id="lbw">61</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">70</td>
+                    <td class="machine">87</td>
+                    <td class="machine">65</td>
+                    <td class="machine">44</td>
+                    <td class="machine" id="lbm">34</td>
                 </tr>
             </tbody>
         </table>
