--- a/GAMES/16Fair-c.html
+++ b/GAMES/16Fair-c.html
@@ -2957,21 +2957,21 @@
             <tbody>
                 <tr>
                     <td class="serial-num">104</td>
-                    <td class="days"><small></small></td>
+                    <td class="days"><small>Dec 28th sat</small></td>
                 
                     <!-- winning-->
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning" id="lbw"></td>
+                    <td class="winning">8</td>
+                    <td class="winning">11</td>
+                    <td class="winning">3</td>
+                    <td class="winning">34</td>
+                    <td class="winning" id="lbw">23</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">33</td>
+                    <td class="machine">4</td>
+                    <td class="machine">78</td>
+                    <td class="machine">68</td>
+                    <td class="machine" id="lbm">15</td>
                 </tr>
             </tbody>
         </table>
