--- a/GAMES/23King.html
+++ b/GAMES/23King.html
@@ -1476,21 +1476,21 @@
             <tbody>
                 <tr>
                     <td class="serial-num">52</td>
-                    <td class="days"><small></small></td>
+                    <td class="days"><small>Dec 28th</small></td>
                 
                     <!-- winning-->
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning" id="lbw"></td>
+                    <td class="winning">19</td>
+                    <td class="winning">14</td>
+                    <td class="winning">58</td>
+                    <td class="winning">48</td>
+                    <td class="winning" id="lbw">68</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">39</td>
+                    <td class="machine">36</td>
+                    <td class="machine">83</td>
+                    <td class="machine">4</td>
+                    <td class="machine" id="lbm">69</td>
                 </tr>
             </tbody>
         </table>
