--- a/GAMES/24National.html
+++ b/GAMES/24National.html
@@ -1474,21 +1474,21 @@
             <tbody>
                 <tr>
                     <td class="serial-num">52</td>
-                    <td class="days"><small></small></td>
+                    <td class="days"><small>Dec 28th</small></td>
                 
                     <!-- winning-->
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning" id="lbw"></td>
+                    <td class="winning">27</td>
+                    <td class="winning">43</td>
+                    <td class="winning">62</td>
+                    <td class="winning">73</td>
+                    <td class="winning" id="lbw">77</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">15</td>
+                    <td class="machine">33</td>
+                    <td class="machine">1</td>
+                    <td class="machine">82</td>
+                    <td class="machine" id="lbm">69</td>
                 </tr>
             </tbody>
         </table>
