--- a/GAMES/7O6.html
+++ b/GAMES/7O6.html
@@ -2911,21 +2911,21 @@
             <tbody>
                 <tr>
                     <td class="serial-num">104</td>
-                    <td class="days"><small></small></td>
+                    <td class="days"><small>Dec 29th sat</small></td>
                 
                     <!-- winning-->
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning" id="lbw"></td>
+                    <td class="winning">54</td>
+                    <td class="winning">74</td>
+                    <td class="winning">72</td>
+                    <td class="winning">36</td>
+                    <td class="winning" id="lbw">62</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">39</td>
+                    <td class="machine">19</td>
+                    <td class="machine">12</td>
+                    <td class="machine">70</td>
+                    <td class="machine" id="lbm">44</td>
                 </tr>
             </tbody>
         </table>
