--- a/GAMES/9Club-m.html
+++ b/GAMES/9Club-m.html
@@ -2909,21 +2909,21 @@
             <tbody>
                 <tr>
                     <td class="serial-num">104</td>
-                    <td class="days"><small></small></td>
+                    <td class="days"><small>Dec 28th sat</small></td>
                 
                     <!-- winning-->
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning" id="lbw"></td>
+                    <td class="winning">29</td>
+                    <td class="winning">69</td>
+                    <td class="winning">24</td>
+                    <td class="winning">81</td>
+                    <td class="winning" id="lbw">53</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">87</td>
+                    <td class="machine">71</td>
+                    <td class="machine">19</td>
+                    <td class="machine">52</td>
+                    <td class="machine" id="lbm">7</td>
                 </tr>
             </tbody>
         </table>
