--- a/GAMES/25Aseda.html
+++ b/GAMES/25Aseda.html
@@ -1492,21 +1492,21 @@
             <tbody>
                 <tr>
                     <td class="serial-num">52</td>
-                    <td class="days"><small></small></td>
+                    <td class="days"><small>Dec 29th</small></td>
                 
                     <!-- winning-->
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning" id="lbw"></td>
+                    <td class="winning">70</td>
+                    <td class="winning">90</td>
+                    <td class="winning">51</td>
+                    <td class="winning">33</td>
+                    <td class="winning" id="lbw">30</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">19</td>
+                    <td class="machine">50</td>
+                    <td class="machine">66</td>
+                    <td class="machine">28</td>
+                    <td class="machine" id="lbm">24</td>
                 </tr>
             </tbody>
         </table>
