--- a/GAMES/11Tota.html
+++ b/GAMES/11Tota.html
@@ -2931,21 +2931,21 @@
             <tbody>
                 <tr>
                     <td class="serial-num">104</td>
-                    <td class="days"><small></small></td>
+                    <td class="days"><small>Dec 29th sun</small></td>
                 
                     <!-- winning-->
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning" id="lbw"></td>
+                    <td class="winning">27</td>
+                    <td class="winning">45</td>
+                    <td class="winning">72</td>
+                    <td class="winning">73</td>
+                    <td class="winning" id="lbw">44</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">32</td>
+                    <td class="machine">79</td>
+                    <td class="machine">9</td>
+                    <td class="machine">28</td>
+                    <td class="machine" id="lbm">38</td>
                 </tr>
             </tbody>
         </table>
