--- a/GAMES/12Mark-II.html
+++ b/GAMES/12Mark-II.html
@@ -2930,21 +2930,21 @@
             <tbody>
                 <tr>
                     <td class="serial-num">104</td>
-                    <td class="days"><small></small></td>
+                    <td class="days"><small>Dec 29th sun</small></td>
                 
                     <!-- winning-->
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning" id="lbw"></td>
+                    <td class="winning">1</td>
+                    <td class="winning">58</td>
+                    <td class="winning">60</td>
+                    <td class="winning">68</td>
+                    <td class="winning" id="lbw">61</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">4</td>
+                    <td class="machine">81</td>
+                    <td class="machine">71</td>
+                    <td class="machine">62</td>
+                    <td class="machine" id="lbm">74</td>
                 </tr>
             </tbody>
         </table>
