--- a/GAMES/14Enugu.html
+++ b/GAMES/14Enugu.html
@@ -2928,21 +2928,21 @@
             <tbody>
                 <tr>
                     <td class="serial-num">104</td>
-                    <td class="days"><small></small></td>
+                    <td class="days"><small>Dec 29th sun</small></td>
                 
                     <!-- winning-->
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning" id="lbw"></td>
+                    <td class="winning">10</td>
+                    <td class="winning">25</td>
+                    <td class="winning">4</td>
+                    <td class="winning">81</td>
+                    <td class="winning" id="lbw">24</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">21</td>
+                    <td class="machine">3</td>
+                    <td class="machine">33</td>
+                    <td class="machine">31</td>
+                    <td class="machine" id="lbm">27</td>
                 </tr>
             </tbody>
         </table>
