--- a/GAMES/15Lucky.html
+++ b/GAMES/15Lucky.html
@@ -2929,21 +2929,21 @@
             <tbody>
                 <tr>
                     <td class="serial-num">104</td>
-                    <td class="days"><small></small></td>
+                    <td class="days"><small>Dec 29th sun</small></td>
                 
                     <!-- winning-->
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning" id="lbw"></td>
+                    <td class="winning">7</td>
+                    <td class="winning">76</td>
+                    <td class="winning">6</td>
+                    <td class="winning">84</td>
+                    <td class="winning" id="lbw">83</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">23</td>
+                    <td class="machine">63</td>
+                    <td class="machine">68</td>
+                    <td class="machine">61</td>
+                    <td class="machine" id="lbm">36</td>
                 </tr>
             </tbody>
         </table>
