--- a/GAMES/17Royal.html
+++ b/GAMES/17Royal.html
@@ -2980,21 +2980,21 @@
             <tbody>
                 <tr>
                     <td class="serial-num">104</td>
-                    <td class="days"><small></small></td>
+                    <td class="days"><small>Dec 29th sun</small></td>
                 
                     <!-- winning-->
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning" id="lbw"></td>
+                    <td class="winning">41</td>
+                    <td class="winning">73</td>
+                    <td class="winning">66</td>
+                    <td class="winning">4</td>
+                    <td class="winning" id="lbw">5</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">70</td>
+                    <td class="machine">48</td>
+                    <td class="machine">38</td>
+                    <td class="machine">19</td>
+                    <td class="machine" id="lbm">85</td>
                 </tr>
             </tbody>
         </table>
