--- a/GAMES/1Diamond.html
+++ b/GAMES/1Diamond.html
@@ -2924,6 +2924,28 @@
                     <td class="machine" id="lbm">29</td>
                 </tr>
             </tbody>  
+
+                                    <!-- day105-->
+            <tbody>
+                <tr>
+                    <td class="serial-num">105</td>
+                    <td class="days"><small>Dec 30th Mon</small></td>
+                
+                    <!-- winning-->
+                    <td class="winning">61</td>
+                    <td class="winning">88</td>
+                    <td class="winning">84</td>
+                    <td class="winning">76</td>
+                    <td class="winning" id="lbw">46</td>
+    
+                    <!-- machine-->
+                    <td class="machine" id="fbm">15</td>
+                    <td class="machine">26</td>
+                    <td class="machine">60</td>
+                    <td class="machine">22</td>
+                    <td class="machine" id="lbm">29</td>
+                </tr>
+            </tbody>
         </table>
         <span>Diamond</span>
     </main>
