--- a/GAMES/3Bingo.html
+++ b/GAMES/3Bingo.html
@@ -2926,6 +2926,28 @@
                     <td class="machine" id="lbm">2</td>
                 </tr>
             </tbody>
+
+                                    <!-- day105-->
+            <tbody>
+                <tr>
+                    <td class="serial-num">105</td>
+                    <td class="days"><small>Dec 30th Mon</small></td>
+                
+                    <!-- winning-->
+                    <td class="winning">31</td>
+                    <td class="winning">56</td>
+                    <td class="winning">90</td>
+                    <td class="winning">84</td>
+                    <td class="winning" id="lbw">55</td>
+    
+                    <!-- machine-->
+                    <td class="machine" id="fbm">60</td>
+                    <td class="machine">78</td>
+                    <td class="machine">30</td>
+                    <td class="machine">26</td>
+                    <td class="machine" id="lbm">82</td>
+                </tr>
+            </tbody>
         </table>
         <span>Bingo</span>
     </main>
