--- a/GAMES/4Metro.html
+++ b/GAMES/4Metro.html
@@ -2925,6 +2925,28 @@
                     <td class="machine" id="lbm">33</td>
                 </tr>
             </tbody>
+
+                                    <!-- day105-->
+            <tbody>
+                <tr>
+                    <td class="serial-num">105</td>
+                    <td class="days"><small>Dec 30th Mon</small></td>
+                
+                    <!-- winning-->
+                    <td class="winning">8</td>
+                    <td class="winning">80</td>
+                    <td class="winning">44</td>
+                    <td class="winning">29</td>
+                    <td class="winning" id="lbw">79</td>
+    
+                    <!-- machine-->
+                    <td class="machine" id="fbm">32</td>
+                    <td class="machine">26</td>
+                    <td class="machine">67</td>
+                    <td class="machine">48</td>
+                    <td class="machine" id="lbm">53</td>
+                </tr>
+            </tbody>
         </table>
         <span>Metro</span>
     </main>
