--- a/GAMES/5Inter.html
+++ b/GAMES/5Inter.html
@@ -2928,6 +2928,28 @@
                     <td class="machine" id="lbm">5</td>
                 </tr>
             </tbody>
+
+                                    <!-- day105-->
+            <tbody>
+                <tr>
+                    <td class="serial-num">105</td>
+                    <td class="days"><small>Dec 30th Mon</small></td>
+                
+                    <!-- winning-->
+                    <td class="winning">74</td>
+                    <td class="winning">61</td>
+                    <td class="winning">64</td>
+                    <td class="winning">56</td>
+                    <td class="winning" id="lbw">2</td>
+    
+                    <!-- machine-->
+                    <td class="machine" id="fbm">65</td>
+                    <td class="machine">76</td>
+                    <td class="machine">88</td>
+                    <td class="machine">90</td>
+                    <td class="machine" id="lbm">84</td>
+                </tr>
+            </tbody>
         </table>
         <span>International</span>
     </main>
