--- a/GAMES/18MSP.html
+++ b/GAMES/18MSP.html
@@ -1496,6 +1496,28 @@
                     <td class="machine" id="lbm">17</td>
                 </tr>
             </tbody>
+
+                                    <!-- day53-->
+            <tbody>
+                <tr>
+                    <td class="serial-num">53</td>
+                    <td class="days"><small>Dec 30th</small></td>
+                
+                    <!-- winning-->
+                    <td class="winning">75</td>
+                    <td class="winning">40</td>
+                    <td class="winning">58</td>
+                    <td class="winning">89</td>
+                    <td class="winning" id="lbw">35</td>
+    
+                    <!-- machine-->
+                    <td class="machine" id="fbm">36</td>
+                    <td class="machine">84</td>
+                    <td class="machine">88</td>
+                    <td class="machine">45</td>
+                    <td class="machine" id="lbm">53</td>
+                </tr>
+            </tbody>
         </table>
         <span>MSP</span>
     </main>
