--- a/GAMES/2People.html
+++ b/GAMES/2People.html
@@ -2933,6 +2933,28 @@
                     <td class="machine" id="lbm">24</td>
                 </tr>
             </tbody>
+
+                                    <!-- day105-->
+            <tbody>
+                <tr>
+                    <td class="serial-num">105</td>
+                    <td class="days"><small>Dec 30th Mon</small></td>
+                
+                    <!-- winning-->
+                    <td class="winning">52</td>
+                    <td class="winning">71</td>
+                    <td class="winning">18</td>
+                    <td class="winning">55</td>
+                    <td class="winning" id="lbw">6</td>
+    
+                    <!-- machine-->
+                    <td class="machine" id="fbm">85</td>
+                    <td class="machine">47</td>
+                    <td class="machine">26</td>
+                    <td class="machine">45</td>
+                    <td class="machine" id="lbm">30</td>
+                </tr>
+            </tbody>
         </table>
         <span>People</span>
 
