--- a/GAMES/10Super.html
+++ b/GAMES/10Super.html
@@ -2926,6 +2926,28 @@
                     <td class="machine" id="lbm">34</td>
                 </tr>
             </tbody>
+
+                                    <!-- day105-->
+            <tbody>
+                <tr>
+                    <td class="serial-num">105</td>
+                    <td class="days"><small>Dec 31st tues</small></td>
+                
+                    <!-- winning-->
+                    <td class="winning">2</td>
+                    <td class="winning">80</td>
+                    <td class="winning">89</td>
+                    <td class="winning">33</td>
+                    <td class="winning" id="lbw">34</td>
+    
+                    <!-- machine-->
+                    <td class="machine" id="fbm">68</td>
+                    <td class="machine">26</td>
+                    <td class="machine">59</td>
+                    <td class="machine">49</td>
+                    <td class="machine" id="lbm">79</td>
+                </tr>
+            </tbody>
         </table>
         <span>Super</span>
     </main>  
