--- a/GAMES/19LUCKY-G.html
+++ b/GAMES/19LUCKY-G.html
@@ -1498,6 +1498,28 @@
                     <td class="machine" id="lbm">25</td>
                 </tr>
             </tbody>
+
+                                     <!-- day105-->
+            <tbody>
+                <tr>
+                    <td class="serial-num">53</td>
+                    <td class="days"><small>Dec 31st</small></td>
+                
+                    <!-- winning-->
+                    <td class="winning">86</td>
+                    <td class="winning">7</td>
+                    <td class="winning">34</td>
+                    <td class="winning">25</td>
+                    <td class="winning" id="lbw">31</td>
+    
+                    <!-- machine-->
+                    <td class="machine" id="fbm">37</td>
+                    <td class="machine">24</td>
+                    <td class="machine">89</td>
+                    <td class="machine">10</td>
+                    <td class="machine" id="lbm">20</td>
+                </tr>
+            </tbody>
         </table>
         <span>LUCKY-G</span>
     </main>
