--- a/GAMES/6Gold.html
+++ b/GAMES/6Gold.html
@@ -2929,6 +2929,28 @@
                     <td class="machine" id="lbm">58</td>
                 </tr>
             </tbody>
+
+                                     <!-- day105-->
+            <tbody>
+                <tr>
+                    <td class="serial-num">105</td>
+                    <td class="days"><small>Dec 31st tues</small></td>
+                
+                    <!-- winning-->
+                    <td class="winning">10</td>
+                    <td class="winning">49</td>
+                    <td class="winning">57</td>
+                    <td class="winning">20</td>
+                    <td class="winning" id="lbw">15</td>
+    
+                    <!-- machine-->
+                    <td class="machine" id="fbm">41</td>
+                    <td class="machine">68</td>
+                    <td class="machine">80</td>
+                    <td class="machine">60</td>
+                    <td class="machine" id="lbm">3</td>
+                </tr>
+            </tbody>
         </table>
         <span>Gold</span>
         </div>
