--- a/GAMES/9Club-m.html
+++ b/GAMES/9Club-m.html
@@ -2926,6 +2926,28 @@
                     <td class="machine" id="lbm">7</td>
                 </tr>
             </tbody>
+
+                                     <!-- day105-->
+            <tbody>
+                <tr>
+                    <td class="serial-num">105</td>
+                    <td class="days"><small>Dec 31st tues</small></td>
+                
+                    <!-- winning-->
+                    <td class="winning">4</td>
+                    <td class="winning">71</td>
+                    <td class="winning">28</td>
+                    <td class="winning">56</td>
+                    <td class="winning" id="lbw">20</td>
+    
+                    <!-- machine-->
+                    <td class="machine" id="fbm">76</td>
+                    <td class="machine">57</td>
+                    <td class="machine">36</td>
+                    <td class="machine">77</td>
+                    <td class="machine" id="lbm">48</td>
+                </tr>
+            </tbody>
         </table>
         <span>Club Master</span>
     </main>
