--- a/GAMES/7O6.html
+++ b/GAMES/7O6.html
@@ -2928,6 +2928,28 @@
                     <td class="machine" id="lbm">44</td>
                 </tr>
             </tbody>
+
+                                     <!-- day105-->
+            <tbody>
+                <tr>
+                    <td class="serial-num">105</td>
+                    <td class="days"><small>Dec 31st tues</small></td>
+                
+                    <!-- winning-->
+                    <td class="winning">90</td>
+                    <td class="winning">86</td>
+                    <td class="winning">30</td>
+                    <td class="winning">50</td>
+                    <td class="winning" id="lbw">68</td>
+    
+                    <!-- machine-->
+                    <td class="machine" id="fbm">46</td>
+                    <td class="machine">34</td>
+                    <td class="machine">4</td>
+                    <td class="machine">32</td>
+                    <td class="machine" id="lbm">78</td>
+                </tr>
+            </tbody>
         </table>
         <span>06</span>
     </main> 
