--- a/GAMES/8Jackpot.html
+++ b/GAMES/8Jackpot.html
@@ -2931,6 +2931,28 @@
                     <td class="machine" id="lbm">85</td>
                 </tr>
             </tbody>
+
+                                     <!-- day105-->
+            <tbody>
+                <tr>
+                    <td class="serial-num">105</td>
+                    <td class="days"><small>Dec 31st tues</small></td>
+                
+                    <!-- winning-->
+                    <td class="winning">15</td>
+                    <td class="winning">3</td>
+                    <td class="winning">28</td>
+                    <td class="winning">30</td>
+                    <td class="winning" id="lbw">48</td>
+    
+                    <!-- machine-->
+                    <td class="machine" id="fbm">74</td>
+                    <td class="machine">58</td>
+                    <td class="machine">77</td>
+                    <td class="machine">64</td>
+                    <td class="machine" id="lbm">38</td>
+                </tr>
+            </tbody>
         </table>
         <span>Jackpot</span>
     </main>
