--- a/GAMES/17Royal.html
+++ b/GAMES/17Royal.html
@@ -2961,11 +2961,11 @@
                     <td class="days"><small>Dec 27th fri</small></td>
                 
                     <!-- winning-->
-                    <td class="winning">22</td>
-                    <td class="winning">73</td>
-                    <td class="winning">61</td>
-                    <td class="winning">18</td>
-                    <td class="winning" id="lbw">41</td>
+                    <td class="winning" style="background-color: rgba(0, 128, 0, 0.183);">16</td>
+                    <td class="winning" style="background-color: rgba(0, 128, 0, 0.183);">30</td>
+                    <td class="winning" style="background-color: rgba(0, 128, 0, 0.183);">10</td>
+                    <td class="winning" style="background-color: rgba(0, 128, 0, 0.183);">22</td>
+                    <td class="winning" id="lbw" style="background-color: rgba(0, 128, 0, 0.183);">43</td>
     
                     <!-- machine-->
                     <td class="machine" id="fbm">51</td>
