--- a/GAMES/16Fair-c.html
+++ b/GAMES/16Fair-c.html
@@ -2975,7 +2975,40 @@
                 </tr>
             </tbody>
         </table>
-        <span>Fair Chance</span>
+
+        <h1>Year 2025</h1>
+
+        <table>
+            <caption></caption>
+            <thead>
+                <tr>
+                    <th class="serial-num">S/N</th>
+                    <th>WEEK</th>
+                    <th colspan="5">WINNING</th>
+                    <th colspan="5">MACHINE</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td class="serial-num"></td>
+                    <td class="days"><small><sup></sup></small></td>
+                   
+                    <!-- winning-->
+                    <td class="winning"></td>
+                    <td class="winning"></td>
+                    <td class="winning"></td>
+                    <td class="winning"></td>
+                    <td class="winning" id="lbw"></td>
+    
+                    <!-- machine-->
+                    <td class="machine" id="fbm"></td>
+                    <td class="machine"></td>
+                    <td class="machine"></td>
+                    <td class="machine"></td>
+                    <td class="machine" id="lbm"></td>
+                </tr>
+            </tbody>
+        </table>
     </main>
 </body>
 </html>
