--- a/GAMES/13Vag.html
+++ b/GAMES/13Vag.html
@@ -2929,7 +2929,7 @@
         <h1>Year 2025</h1>
 
         <table>
-            <caption>vag</caption>
+            <caption>VAG</caption>
             <thead>
                 <tr>
                     <th class="serial-num">S/N</th>
@@ -2962,21 +2962,21 @@
             <tbody>
                 <tr>
                     <td class="serial-num"></td>
-                    <td class="days"><small><sup></sup></small></td>
+                    <td class="days"><small>Jan 3rd Fri</small></td>
                    
                     <!-- winning-->
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning" id="lbw"></td>
+                    <td class="winning">47</td>
+                    <td class="winning">19</td>
+                    <td class="winning">10</td>
+                    <td class="winning">75</td>
+                    <td class="winning" id="lbw">22</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">14</td>
+                    <td class="machine">62</td>
+                    <td class="machine">26</td>
+                    <td class="machine">33</td>
+                    <td class="machine" id="lbm">17</td>
                 </tr>
             </tbody>
         </table>
