--- a/GAMES/10Super.html
+++ b/GAMES/10Super.html
@@ -2949,7 +2949,8 @@
                 </tr>
             </tbody>
         </table>
-        <span>Super</span>
+        
+        <h4 style="color: #fff; width: 100%; text-align: center; background-color: #000; padding: 10px;">Year 2025</h4>
 
         <table>
             <caption>SUPER</caption>
