--- a/GAMES/25Aseda.html
+++ b/GAMES/25Aseda.html
@@ -1509,6 +1509,27 @@
                     <td class="machine" id="lbm">24</td>
                 </tr>
             </tbody>
+
+            <tbody>
+                <tr>
+                    <td class="serial-num"></td>
+                    <td class="days"><small>Jan 5th</small></td>
+                   
+                    <!-- winning-->
+                    <td class="winning">30</td>
+                    <td class="winning">12</td>
+                    <td class="winning">10</td>
+                    <td class="winning">59</td>
+                    <td class="winning" id="lbw">34</td>
+    
+                    <!-- machine-->
+                    <td class="machine" id="fbm"></td>
+                    <td class="machine"></td>
+                    <td class="machine"></td>
+                    <td class="machine"></td>
+                    <td class="machine" id="lbm"></td>
+                </tr>
+            </tbody>
         </table>
         <span>Aseda</span>
     </main>
