--- a/GAMES/4Metro.html
+++ b/GAMES/4Metro.html
@@ -2948,10 +2948,11 @@
                 </tr>
             </tbody>
         </table>
-        <span>Metro</span>
+
+        <h4 style="color: #fff; width: 100%; text-align: center; background-color: #000; padding: 10px;">Year 2025</h4>
 
         <table>
-            <caption></caption>
+            <caption>METRO</caption>
             <thead>
                 <tr>
                     <th class="serial-num">S/N</th>
@@ -2981,6 +2982,27 @@
                 </tr>
             </tbody>
 
+
+            <tbody>
+                <tr>
+                    <td class="serial-num"></td>
+                    <td class="days"><small>Jan, 6th Mon</small></td>
+                   
+                    <!-- winning-->
+                    <td class="winning">49</td>
+                    <td class="winning">16</td>
+                    <td class="winning">8</td>
+                    <td class="winning">50</td>
+                    <td class="winning" id="lbw">34</td>
+    
+                    <!-- machine-->
+                    <td class="machine" id="fbm">57</td>
+                    <td class="machine">51</td>
+                    <td class="machine">46</td>
+                    <td class="machine">31</td>
+                    <td class="machine" id="lbm">62</td>
+                </tr>
+            </tbody>
 
             <tbody>
                 <tr>
