--- a/GAMES/7O6.html
+++ b/GAMES/7O6.html
@@ -2951,7 +2951,8 @@
                 </tr>
             </tbody>
         </table>
-        <span>06</span>
+        
+        <h4 style="color: #fff; width: 100%; text-align: center; background-color: #000; padding: 10px;">Year 2025</h4>
 
         <table>
             <caption>06</caption>
