--- a/GAMES/8Jackpot.html
+++ b/GAMES/8Jackpot.html
@@ -2954,7 +2954,8 @@
                 </tr>
             </tbody>
         </table>
-        <span>Jackpot</span>
+        
+        <h4 style="color: #fff; width: 100%; text-align: center; background-color: #000; padding: 10px;">Year 2025</h4>
 
         <table>
             <caption>JACKPOT</caption>
