--- a/GAMES/6Gold.html
+++ b/GAMES/6Gold.html
@@ -2989,8 +2989,8 @@
 
             <tbody>
                 <tr>
-                    <td class="serial-num"></td>
-                    <td class="days"><small>Jan, 7th Tues</small></td>
+                    <td class="serial-num">1</td>
+                    <td class="days"><small>Jan, Tues 7th</small></td>
                    
                     <!-- winning-->
                     <td class="winning">31</td>
