--- a/GAMES/11Tota.html
+++ b/GAMES/11Tota.html
@@ -2950,8 +2950,7 @@
             </tbody>
         </table>
 
-
-        <h1>Year 2025</h1>
+        <h4 style="color: #fff; width: 100%; text-align: center; background-color: #000; padding: 10px;">Year 2025</h4>
 
         <table>
             <caption>TOTA</caption>
