--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -251,14 +251,14 @@
                 <p class="machine">41 - 40 - 26 - 33 - 86</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">mark ii</h3>
+                <p class="winning">49 - 13 - 47 - 81 - 67</p>
+                <p class="machine">54 - 42 - 77 - 85 - 7</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">vag</h3>
+                <p class="winning">20 - 83 - 56 - 67 - 80</p>
+                <p class="machine">38 - 15 - 68 - 30 - 44</p>        
             </article>
             <article>
                 <h3 class="game"></h3>
