update and added monetag

--- a/GAMES/20Midweek.html
+++ b/GAMES/20Midweek.html
@@ -1535,21 +1535,21 @@
             <tbody>
                 <tr>
                     <td class="serial-num"></td>
-                    <td class="days"><small></small></td>
+                    <td class="days"><small>Jan., 8th</small></td>
                    
                     <!-- winning-->
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning" id="lbw"></td>
+                    <td class="winning">19</td>
+                    <td class="winning">72</td>
+                    <td class="winning">76</td>
+                    <td class="winning">55</td>
+                    <td class="winning" id="lbw">58</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">24</td>
+                    <td class="machine">71</td>
+                    <td class="machine">8</td>
+                    <td class="machine">1</td>
+                    <td class="machine" id="lbm">89</td>
                 </tr>
             </tbody>
         </table>
