--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -261,24 +261,25 @@
                 <p class="machine">38 - 15 - 68 - 30 - 44</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">Enugu</h3>
+                <p class="winning">83 - 48 - 27 - 79 - 80</p>
+                <p class="machine">3 - 35 - 78 - 47 - 32</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">Lucky-g</h3>
+                <p class="winning">24 - 38 - 28 - 16 - 75</p>
+                <p class="machine">58 - 48 - 46 - 44 - 76</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">Midweek</h3>
+                <p class="winning">19 - 72 - 76 - 55 - 58</p>
+                <p class="machine">24 - 71 - 08 - 01 - 89</p>        
             </article>
+            
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">Lucky</h3>
+                <p class="winning">19 - 1 - 10 - 56 - 26</p>
+                <p class="machine">43 - 39 - 83 - 22 - 35</p>        
             </article>
         </section> 
 
