update all result

--- a/GAMES/19LUCKY-G.html
+++ b/GAMES/19LUCKY-G.html
@@ -1521,7 +1521,53 @@
                 </tr>
             </tbody>
         </table>
+
+        <table>
+
+                                <!-- day1-->
+        <tbody>
+            <tr>
+                <td class="serial-num">1</td>
+                <td class="days"><small>Jan Wed 8th</small></td>
+               
+                <!-- winning-->
+                <td class="winning">24</td>
+                <td class="winning">38</td>
+                <td class="winning">28</td>
+                <td class="winning">16</td>
+                <td class="winning" id="lbw">75</td>
+
+                <!-- machine-->
+                <td class="machine" id="fbm">58</td>
+                <td class="machine">48</td>
+                <td class="machine">46</td>
+                <td class="machine">44</td>
+                <td class="machine" id="lbm">76</td>
+            </tr>
+        </tbody>
         <span>LUCKY-G</span>
+
+        <tbody>
+            <tr>
+                <td class="serial-num"></td>
+                <td class="days"><small></small></td>
+               
+                <!-- winning-->
+                <td class="winning"></td>
+                <td class="winning"></td>
+                <td class="winning"></td>
+                <td class="winning"></td>
+                <td class="winning" id="lbw"></td>
+
+                <!-- machine-->
+                <td class="machine" id="fbm"></td>
+                <td class="machine"></td>
+                <td class="machine"></td>
+                <td class="machine"></td>
+                <td class="machine" id="lbm"></td>
+            </tr>
+        </tbody>
+        </table>
     </main>
 </body>
 </html>
