correct Royal mistake

--- a/GAMES/21Fortune.html
+++ b/GAMES/21Fortune.html
@@ -1545,11 +1545,11 @@
                     <td class="winning" id="lbw">6</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">67</td>
+                    <td class="machine">38</td>
+                    <td class="machine">75</td>
+                    <td class="machine">9</td>
+                    <td class="machine" id="lbm">33</td>
                 </tr>
             </tbody>
 
