--- a/GAMES/17Royal.html
+++ b/GAMES/17Royal.html
@@ -3082,18 +3082,18 @@
                     <td class="days"><small>Jan., Fri 10th</small></td>
                    
                     <!-- winning-->
-                    <td class="winning">19</td>
-                    <td class="winning">1</td>
-                    <td class="winning">10</td>
-                    <td class="winning">56</td>
-                    <td class="winning" id="lbw">26</td>
+                    <td class="winning" class="winning" style="background-color: rgba(0, 128, 0, 0.183);">19</td>
+                    <td class="winning" class="winning" style="background-color: rgba(0, 128, 0, 0.183);">90</td>
+                    <td class="winning" class="winning" style="background-color: rgba(0, 128, 0, 0.183);">4</td>
+                    <td class="winning" class="winning" style="background-color: rgba(0, 128, 0, 0.183);">74</td>
+                    <td class="winning" id="lbw" class="winning" style="background-color: rgba(0, 128, 0, 0.183);">16</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm">43</td>
-                    <td class="machine">39</td>
-                    <td class="machine">83</td>
-                    <td class="machine">22</td>
-                    <td class="machine" id="lbm">35</td>
+                    <td class="machine" id="fbm" class="winning" style="background-color: rgba(0, 128, 0, 0.183);">40</td>
+                    <td class="machine" class="winning" style="background-color: rgba(0, 128, 0, 0.183);">9</td>
+                    <td class="machine" class="winning" style="background-color: rgba(0, 128, 0, 0.183);">31</td>
+                    <td class="machine" class="winning" style="background-color: rgba(0, 128, 0, 0.183);">69</td>
+                    <td class="machine" id="lbm" class="winning" style="background-color: rgba(0, 128, 0, 0.183);">81</td>
                 </tr>
             </tbody>
 
