added Fri 10th result

--- a/GAMES/17Royal.html
+++ b/GAMES/17Royal.html
@@ -13,6 +13,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Royal Result | Baba Ijebu</title>
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <link rel="stylesheet" href="tableStyles.css">
 
     <!-- <style>
@@ -3077,9 +3079,12 @@
 
                                     <!--day2-->
             <tbody>
-                <tr>
+                <tr style="position: relative;">
                     <td class="serial-num">2</td>
                     <td class="days"><small>Jan., Fri 10th</small></td>
+
+                    <!-- <td><i class="fa-solid fa-pen-to-square" style="position: absolute; left: 40px;"></i></td>  -->
+
                    
                     <!-- winning-->
                     <td class="winning" class="winning" style="background-color: rgba(0, 128, 0, 0.183);">19</td>
@@ -3087,7 +3092,7 @@
                     <td class="winning" class="winning" style="background-color: rgba(0, 128, 0, 0.183);">4</td>
                     <td class="winning" class="winning" style="background-color: rgba(0, 128, 0, 0.183);">74</td>
                     <td class="winning" id="lbw" class="winning" style="background-color: rgba(0, 128, 0, 0.183);">16</td>
-    
+
                     <!-- machine-->
                     <td class="machine" id="fbm" class="winning" style="background-color: rgba(0, 128, 0, 0.183);">40</td>
                     <td class="machine" class="winning" style="background-color: rgba(0, 128, 0, 0.183);">9</td>
