--- a/GAMES/6Gold.html
+++ b/GAMES/6Gold.html
@@ -3008,7 +3008,29 @@
                 </tr>
             </tbody>
 
-                                    <!-- day-->
+                                    <!-- day2-->
+            <tbody>
+                <tr>
+                    <td class="serial-num">2</td>
+                    <td class="days"><small>Jan., Fri 10th</small></td>
+                   
+                    <!-- winning-->
+                    <td class="winning">45</td>
+                    <td class="winning">47</td>
+                    <td class="winning">53</td>
+                    <td class="winning">32</td>
+                    <td class="winning" id="lbw">38</td>
+    
+                    <!-- machine-->
+                    <td class="machine" id="fbm">77</td>
+                    <td class="machine">62</td>
+                    <td class="machine">84</td>
+                    <td class="machine">16</td>
+                    <td class="machine" id="lbm">87</td>
+                </tr>
+            </tbody>
+
+                                    <!-- day3-->
             <tbody>
                 <tr>
                     <td class="serial-num"></td>
