--- a/GAMES/18MSP.html
+++ b/GAMES/18MSP.html
@@ -1523,6 +1523,7 @@
         <h4 style="color: #fff; width: 100%; text-align: center; background-color: #000; padding: 10px;">Year 2025</h4>
 
         <table>
+            <caption>MSP</caption>
             <tbody>
                 <tr>
                     <td class="serial-num">1</td>
